--- a/index.html
+++ b/index.html
@@ -5,85 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+    <script src="js-file.js" defer></script>
   </head>
 
   <body></body>
-  <script>
-    /* Randomly select whether computer plays rock, paper or scissors */
-
-    function computerPlay() {
-      let randomNum = Math.random();
-
-      switch (true) {
-        case randomNum <= 0.33:
-          return "rock";
-          break;
-        case randomNum >= 0.66:
-          return "paper";
-          break;
-        default:
-          return "scissors";
-      }
-    }
-
-    /* Play round of RPS and determine winner */
-
-    function playRound(playerSelection, computerSelection) {
-      if (playerSelection === computerSelection) {
-        console.log("It's a tie! Play again!");
-        return "neither";
-      } else if (
-        (playerSelection === "rock" && computerSelection === "scissors") ||
-        (playerSelection === "scissors" && computerSelection === "paper") ||
-        (playerSelection === "paper" && computerSelection === "rock")
-      ) {
-        console.log(`You win! ${playerSelection} beats ${computerSelection}!`);
-        return "player";
-      } else if (
-        (playerSelection === "scissors" && computerSelection === "rock") ||
-        (playerSelection === "paper" && computerSelection === "scissors") ||
-        (playerSelection === "rock" && computerSelection === "paper")
-      ) {
-        console.log(`You lose! ${computerSelection} beats ${playerSelection}!`);
-        return "computer";
-      }
-    }
-
-    /* Declare global variables for keeping score (revisit? look into a way to accomplish this without global variables?) */
-
-    var computerScore = 0;
-    var playerScore = 0;
-
-    /* Count score and display record at the end of the game */
-
-    function scoreCounter(gameOutcome) {
-      if (gameOutcome === "player") {
-        window.playerScore++;
-      } else if (gameOutcome === "computer") {
-        window.computerScore++;
-      }
-    }
-
-    function displayRecord() {
-      if (window.computerScore > window.playerScore) {
-        return `Computer Wins ${window.computerScore} : ${window.playerScore} !`;
-      } else {
-        return `Player Wins ${window.playerScore} : ${window.computerScore} !`;
-      }
-    }
-
-    /* Play RPS with computer 5 times */
-
-    function game() {
-      for (let i = 0; i < 5; i++) {
-        const playerSelection = prompt(
-          "Rock, Paper or Scissors?"
-        ).toLowerCase();
-        const computerSelection = computerPlay();
-        let gameOutcome = playRound(playerSelection, computerSelection);
-        let record = scoreCounter(gameOutcome);
-      }
-      console.log(displayRecord());
-    }
-  </script>
 </html>
