Create HTML Framework, Header & Action Tiles

--- a/index.html
+++ b/index.html
@@ -9,5 +9,22 @@
     <script src="js-file.js" defer></script>
   </head>
 
-  <body></body>
+  <body>
+    <div class="header">
+      <div>rock - paper - scissor . . . shoot!</div>
+    </div>
+    <div class="container-one">
+      <div class="action">
+        <img class="action-imgs" src="imgs/rock.png" alt="image1.jpg" />
+      </div>
+      <div class="action">
+        <img class="action-imgs" src="imgs/paper.png" alt="image1.jpg" />
+      </div>
+
+      <div class="action">
+        <img class="action-imgs" src="imgs/scissors.png" alt="image1.jpg" />
+      </div>
+    </div>
+    <div class="container-two"></div>
+  </body>
 </html>
