Add Event Listeners & Update Scoreboard

--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
       <div>rock - paper - scissor . . . shoot!</div>
     </div>
     <div class="container-one">
-      <div class="action">
+      <div id="rock" class="action">
         <img class="action-imgs" src="imgs/rock.png" alt="image1.jpg" />
       </div>
-      <div class="action">
+      <div id="paper" class="action">
         <img class="action-imgs" src="imgs/paper.png" alt="image1.jpg" />
       </div>
 
-      <div class="action">
+      <div id="scissors" class="action">
         <img class="action-imgs" src="imgs/scissors.png" alt="image1.jpg" />
       </div>
     </div>
-    <div class="container-two"></div>
+    <div class="container-two">
+      <div>You vs. Computer</div>
+      <div class="score">0 : 0</div>
+    </div>
   </body>
 </html>
