Add Winner / Loser Prompt & Score Reset

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div class="container-two">
       <div>You vs. Computer</div>
       <div class="score">0 : 0</div>
+      <div id="outcome"></div>
     </div>
   </body>
 </html>
